fix(codemirror) fix codemirror align bug and README

--- a/src/App.css
+++ b/src/App.css
@@ -116,3 +116,10 @@
   background: rgba(0,0,0,0.12);
   box-shadow: inset 0 0 10px rgba(0,0,0,0.2);
 }
+
+.CodeMirror {
+  font-size: 16px !important;
+  padding: 20px;
+  line-height: 21px;
+}
+
