--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  line-height: 1 !important;
 }
 
 code {
